--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <link rel="stylesheet" type="text/css" href="css/main.css"></link>
+  <link rel="stylesheet" type="text/css" href="main.css"></link>
   <head>
       <script type="text/javascript" src="./jquery-1.10.1.js"></script>
   </head>
