--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <br><br><br>
       <input type="radio" name="question" value="D"><label id="optionD"></label>
 
-      <button class="btn3" onclick="myFunction2()">Next</button>
+      <button class="btn3" onclick="getAnswer()">Next</button>
     </div>
 
     <div id="page3">
