--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -36,21 +36,27 @@
     'even without deliberate practice, rajeev could improve his skill by practice',
     'lack of deliberate practice, to say, always practice a general and broad task set without pinpointing where exactly is not good\n'];
 
+  var correct_q1 = opt_q1[4];
 
   var opt_q2 = ['the feedback needs to be given by an external agent\n',
     'not receiving immediate feedback may make rajeev not yield an improvement\n',
     'also, he is not making adjustments frequent enough',
     'finally, the third part of deliberate practice of getting informative feedback and remedial training could be argued that hes doing this for himself'];
+  
 
   var opt_q3 = ['you made a great progress and that is due to your efforts, due to what you did rather than who you are',
     'keep up with the great work',
     'great, you are doing well on this song because of your hard practice',
     'great effort'];
 
+
+
   var opt_q4 = ['these students will feel they could also achieve better score if they work hard',
     'yes, because it gives them the confidence that they can master a concept enough to teach others and help others do well when tested on that concept',
     'especially for those low-achieving students, jigsaw enables them to learn from other membersin the expert group as well as jigsaw group, knowing that they could also learn as well as their peers',
     'no, because it doesn’t implicate how the brain works, and the malleable nature of intelligence'];
+
+
 
   function shuffle(array) {
     var currentIndex = array.length, temporaryValue, randomIndex;
